--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^4.2.0",
+    "swagger-jsdoc": "^5.0.0",
+    "swagger-ui-express": "^4.1.4",
     "xss-clean": "^0.1.1"
   }
 }
